--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,114 @@
 }
 
 /*################
-  Q&A
+  MEMBERS (STYLES)
+###################*/
+.rightNameStyles {
+  grid-column: 1/7;
+  grid-row: 1/3;
+  margin-left: 0.25em;
+}
+.XLrightNameStyles {
+  grid-column: 1/7;
+  grid-row: 1/3;
+  font-size: 7rem;
+  margin-left: 0.45em;
+}
+.rightImgStyles {
+  grid-column: 7/13;
+  grid-row: 2/10;
+  justify-self: start;
+  align-self: center;
+}
+.XLrightImgStyles {
+  grid-column: 7/13;
+  grid-row: 1/9;
+  justify-self: center;
+  align-self: center;
+}
+.rightBioStyles {
+  grid-column: 1/7;
+  grid-row: 3/4;
+  align-self: center;
+  display: flex;
+  justify-content: space-around;
+  margin-right: 6em;
+}
+.XLrightBioStyles {
+  grid-column: 1/7;
+  grid-row: 2/4;
+  align-self: center;
+  display: flex;
+  justify-content: space-evenly;
+  margin-right: 9em;
+}
+.rightBlurbStyles {
+  grid-row: 4/10;
+  grid-column: 1/7;
+  font-size: 1.15rem;
+  width: 90%;
+  justify-self: center;
+  align-self: center;
+}
+.XLrightBlurbStyles {
+  grid-row: 3/9;
+  grid-column: 1/8;
+  font-size: 1.05rem;
+  width: 80%;
+  justify-self: center;
+  align-self: center;
+  margin-bottom: 4em;
+}
+.rightTriangleStyles {
+  grid-column: 6/13;
+  grid-row: 1/13;
+}
+.XLrightTriangleStyles {
+  grid-column: 6/13;
+  grid-row: 1/11;
+}
+.rightScrollStyles {
+  grid-column: 1/11;
+  grid-row: 10/13;
+  width: 95%;
+  height: 200px;
+}
+.XLrightScrollStyles {
+  grid-column: 1/11;
+  grid-row: 8/11;
+  width: 90%;
+  height: 225px;
+}
+
+
+
+
+.leftNameStyles {
+  grid-column: 7/13;
+  grid-row: 1/3;
+  margin-left: 0.25em;
+}
+.XLleftNameStyles {
+  grid-column: 1/7;
+  grid-row: 1/3;
+  font-size: 7rem;
+  margin-left: 0.45em;
+}
+.leftImgStyles {
+  grid-column: 1/7;
+  grid-row: 1/11;
+  justify-self: center;
+  align-self: center;
+}
+.XLrightImgStyles {
+  grid-column: 7/13;
+  grid-row: 1/9;
+  justify-self: center;
+  align-self: center;
+}
+
+/*################
+  MEMBERS (TRAINGLES)
 ###################*/
 .member_mobileRedTopRightTriangle {
   width: 0;
