--- a/src/index.css
+++ b/src/index.css
@@ -81,8 +81,8 @@
 .XLrightNameStyles {
   grid-column: 1/7;
   grid-row: 1/3;
-  font-size: 7rem;
-  margin-left: 0.45em;
+  font-size: 6rem;
+  margin-left: 0.65em;
 }
 .rightImgStyles {
   grid-column: 7/13;
@@ -152,34 +152,88 @@
 
 
 
-
 .leftNameStyles {
   grid-column: 7/13;
   grid-row: 1/3;
   margin-left: 0.25em;
 }
 .XLleftNameStyles {
-  grid-column: 1/7;
+  grid-column: 6/13;
   grid-row: 1/3;
-  font-size: 7rem;
-  margin-left: 0.45em;
+  font-size: 6rem;
+  margin-left: 0.6em;
 }
 .leftImgStyles {
   grid-column: 1/7;
-  grid-row: 1/11;
+  grid-row: 2/10;
   justify-self: center;
   align-self: center;
 }
-.XLrightImgStyles {
-  grid-column: 7/13;
-  grid-row: 1/9;
+.XLleftImgStyles {
+  grid-column: 1/7;
+  grid-row: 1/10;
   justify-self: center;
   align-self: center;
+  margin-bottom: 4em;
+}
+.leftBioStyles {
+  grid-column: 7/13;
+  grid-row: 3/4;
+  align-self: center;
+  display: flex;
+  justify-content: space-around;
+  margin-right: 6em;
+}
+.XLleftBioStyles {
+  grid-column: 6/13;
+  grid-row: 2/4;
+  align-self: center;
+  display: flex;
+  justify-content: space-evenly;
+  margin-right: 16em;
+}
+.leftBlurbStyles {
+  grid-row: 4/10;
+  grid-column: 7/13;
+  font-size: 1.15rem;
+  width: 90%;
+  justify-self: center;
+  align-self: center;
+}
+.XLleftBlurbStyles {
+  grid-row: 3/9;
+  grid-column: 6/13;
+  font-size: 1.05rem;
+  width: 80%;
+  justify-self: center;
+  align-self: center;
+  margin-bottom: 4em;
+}
+.leftTriangleStyles {
+  grid-column: 1/8;
+  grid-row: 1/13;
+}
+.XLleftTriangleStyles {
+  grid-column: 1/9;
+  grid-row: 1/11;
+}
+.leftScrollStyles {
+  grid-column: 3/13;
+  grid-row: 10/13;
+  width: 95%;
+  height: 200px;
+}
+.XLleftScrollStyles {
+  grid-column: 3/13;
+  grid-row: 8/11;
+  width: 90%;
+  height: 225px;
 }
 
 /*################
   MEMBERS (TRAINGLES)
 ###################*/
+/* RENJUN */
 .member_mobileRedTopRightTriangle {
   width: 0;
   height: 0;
@@ -203,7 +257,39 @@
 }
 
 
-.member_mobileYellowBottomRightTriangle {
+/* JENO */
+.member_desktopDredBottomLeftTriangle {
+  width: 0;
+  height: 0;
+  border-bottom: 918px solid var(--color-dark-red);
+  border-left: 0px solid transparent;
+  border-right: 555px solid transparent;
+}
+.member_fullDredBottomLeftTriangle {
+  width: 0;
+  height: 0;
+  border-bottom: 827px solid var(--color-dark-red);
+  border-left: 0px solid transparent;
+  border-right: 700px solid transparent;
+}
+.member_desktopBlueBottomLeftTriangle {
+  width: 0;
+  height: 0;
+  border-bottom: 918px solid var(--color-blue);
+  border-left: 0px solid transparent;
+  border-right: 555px solid transparent;
+}
+.member_fullBlueBottomLeftTriangle {
+  width: 0;
+  height: 0;
+  border-bottom: 827px solid var(--color-blue);
+  border-left: 0px solid transparent;
+  border-right: 700px solid transparent;
+}
+
+
+/* HAECHAN */
+.member_mobileYellowTopRightTriangle {
   width: 0;
   height: 0;
   border-top: 600px solid var(--color-yellow);
@@ -225,7 +311,24 @@
   border-right: 0px solid transparent;
 }
 
+/* JAEMIN */
+.member_desktopRedBottomLeftTriangle {
+  width: 0;
+  height: 0;
+  border-top: 920px solid var(--color-red);
+  border-left: 0px solid transparent;
+  border-right: 525px solid transparent;
+}
+.member_fullRedBottomLeftTriangle {
+  width: 0;
+  height: 0;
+  border-top: 840px solid var(--color-red);
+  border-left: 0px solid transparent;
+  border-right: 600px solid transparent;
+}
 
+
+/* CHENLE */
 .member_mobileDRedTopRightTriangle {
   width: 0;
   height: 0;
@@ -269,14 +372,22 @@
   border-right: 0px solid transparent;
 }
 
-.member_mobileTopLeftTriangle {
+/* HAECHAN */
+.member_desktopYellowBottomLeftTriangle {
   width: 0;
   height: 0;
-  border-top: 600px solid var(--color-red);
+  border-bottom: 918px solid var(--color-yellow);
   border-left: 0px solid transparent;
-  border-right: 470px solid transparent;
-
+  border-right: 555px solid transparent;
 }
+.member_fullYellowBottomLeftTriangle {
+  width: 0;
+  height: 0;
+  border-bottom: 827px solid var(--color-yellow);
+  border-left: 0px solid transparent;
+  border-right: 700px solid transparent;
+}
+
 
 /*################
   Q&A
