--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,7 @@
 }
 .XLrightImgStyles {
   grid-column: 7/13;
-  grid-row: 1/9;
+  grid-row: 1/8;
   justify-self: center;
   align-self: center;
 }
@@ -110,7 +110,8 @@
   align-self: center;
   display: flex;
   justify-content: space-evenly;
-  margin-right: 9em;
+  margin-right: 8em;
+  margin-bottom: 2.5em;
 }
 .rightBlurbStyles {
   grid-row: 4/10;
@@ -121,10 +122,10 @@
   align-self: center;
 }
 .XLrightBlurbStyles {
-  grid-row: 3/9;
+  grid-row: 2/9;
   grid-column: 1/8;
-  font-size: 1.05rem;
-  width: 80%;
+  font-size: 1rem;
+  width: 82%;
   justify-self: center;
   align-self: center;
   margin-bottom: 4em;
@@ -135,7 +136,7 @@
 }
 .XLrightTriangleStyles {
   grid-column: 6/13;
-  grid-row: 1/11;
+  grid-row: 1/10;
 }
 .rightScrollStyles {
   grid-column: 1/11;
@@ -145,9 +146,9 @@
 }
 .XLrightScrollStyles {
   grid-column: 1/11;
-  grid-row: 8/11;
+  grid-row: 7/10;
   width: 90%;
-  height: 225px;
+  height: 200px;
 }
 
 
@@ -171,7 +172,7 @@
 }
 .XLleftImgStyles {
   grid-column: 1/7;
-  grid-row: 1/10;
+  grid-row: 1/9;
   justify-self: center;
   align-self: center;
   margin-bottom: 4em;
@@ -191,6 +192,7 @@
   display: flex;
   justify-content: space-evenly;
   margin-right: 16em;
+  margin-bottom: 3.25em;
 }
 .leftBlurbStyles {
   grid-row: 4/10;
@@ -201,9 +203,9 @@
   align-self: center;
 }
 .XLleftBlurbStyles {
-  grid-row: 3/9;
+  grid-row: 2/9;
   grid-column: 6/13;
-  font-size: 1.05rem;
+  font-size: 1rem;
   width: 80%;
   justify-self: center;
   align-self: center;
@@ -225,7 +227,7 @@
 }
 .XLleftScrollStyles {
   grid-column: 3/13;
-  grid-row: 8/11;
+  grid-row: 7/10;
   width: 90%;
   height: 225px;
 }
@@ -251,7 +253,7 @@
 .member_fullRedTopRightTriangle {
   width: 0;
   height: 0;
-  border-top: 840px solid var(--color-red);
+  border-top: 740px solid var(--color-red);
   border-left: 700px solid transparent;
   border-right: 0px solid transparent;
 }
@@ -268,7 +270,7 @@
 .member_fullDredBottomLeftTriangle {
   width: 0;
   height: 0;
-  border-bottom: 827px solid var(--color-dark-red);
+  border-bottom: 740px solid var(--color-dark-red);
   border-left: 0px solid transparent;
   border-right: 700px solid transparent;
 }
@@ -282,7 +284,7 @@
 .member_fullBlueBottomLeftTriangle {
   width: 0;
   height: 0;
-  border-bottom: 827px solid var(--color-blue);
+  border-bottom: 740px solid var(--color-blue);
   border-left: 0px solid transparent;
   border-right: 700px solid transparent;
 }
@@ -306,7 +308,7 @@
 .member_fullYellowTopRightTriangle {
   width: 0;
   height: 0;
-  border-bottom: 827px solid var(--color-yellow);
+  border-bottom: 740px solid var(--color-yellow);
   border-left: 700px solid transparent;
   border-right: 0px solid transparent;
 }
@@ -322,7 +324,7 @@
 .member_fullRedBottomLeftTriangle {
   width: 0;
   height: 0;
-  border-top: 840px solid var(--color-red);
+  border-top: 740px solid var(--color-red);
   border-left: 0px solid transparent;
   border-right: 600px solid transparent;
 }
@@ -346,7 +348,7 @@
 .member_fullDRedTopRightTriangle {
   width: 0;
   height: 0;
-  border-top: 840px solid var(--color-dark-red);
+  border-top: 740px solid var(--color-dark-red);
   border-left: 700px solid transparent;
   border-right: 0px solid transparent;
 }
@@ -367,12 +369,12 @@
 .member_fullBlueTopRightTriangle {
   width: 0;
   height: 0;
-  border-top: 840px solid var(--color-blue);
+  border-top: 740px solid var(--color-blue);
   border-left: 700px solid transparent;
   border-right: 0px solid transparent;
 }
 
-/* HAECHAN */
+/* JSIUNG */
 .member_desktopYellowBottomLeftTriangle {
   width: 0;
   height: 0;
@@ -383,7 +385,7 @@
 .member_fullYellowBottomLeftTriangle {
   width: 0;
   height: 0;
-  border-bottom: 827px solid var(--color-yellow);
+  border-bottom: 740px solid var(--color-yellow);
   border-left: 0px solid transparent;
   border-right: 700px solid transparent;
 }
