--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,7 @@
 }
 .rightImgStyles {
   grid-column: 7/13;
-  grid-row: 2/10;
+  grid-row: 1/10;
   justify-self: start;
   align-self: center;
 }
@@ -98,11 +98,12 @@
 }
 .rightBioStyles {
   grid-column: 1/7;
-  grid-row: 3/4;
+  grid-row: 2/4;
   align-self: center;
   display: flex;
   justify-content: space-around;
-  margin-right: 6em;
+  margin-right: 7em;
+  margin-bottom: 0.5em;
 }
 .XLrightBioStyles {
   grid-column: 1/7;
@@ -114,9 +115,9 @@
   margin-bottom: 2.5em;
 }
 .rightBlurbStyles {
-  grid-row: 4/10;
+  grid-row: 3/10;
   grid-column: 1/7;
-  font-size: 1.15rem;
+  font-size: 1.1rem;
   width: 90%;
   justify-self: center;
   align-self: center;
@@ -140,9 +141,9 @@
 }
 .rightScrollStyles {
   grid-column: 1/11;
-  grid-row: 10/13;
+  grid-row: 9/13;
   width: 95%;
-  height: 200px;
+  height: 180px;
 }
 .XLrightScrollStyles {
   grid-column: 1/11;
@@ -179,7 +180,7 @@
 }
 .leftBioStyles {
   grid-column: 7/13;
-  grid-row: 3/4;
+  grid-row: 2/4;
   align-self: center;
   display: flex;
   justify-content: space-around;
@@ -195,9 +196,9 @@
   margin-bottom: 3.25em;
 }
 .leftBlurbStyles {
-  grid-row: 4/10;
+  grid-row: 3/10;
   grid-column: 7/13;
-  font-size: 1.15rem;
+  font-size: 1.1rem;
   width: 90%;
   justify-self: center;
   align-self: center;
@@ -221,9 +222,9 @@
 }
 .leftScrollStyles {
   grid-column: 3/13;
-  grid-row: 10/13;
+  grid-row: 9/13;
   width: 95%;
-  height: 200px;
+  height: 180px;
 }
 .XLleftScrollStyles {
   grid-column: 3/13;
@@ -235,6 +236,8 @@
 /*################
   MEMBERS (TRAINGLES)
 ###################*/
+
+
 /* RENJUN */
 .member_mobileRedTopRightTriangle {
   width: 0;
@@ -246,7 +249,7 @@
 .member_desktopRedTopRightTriangle {
   width: 0;
   height: 0;
-  border-top: 900px solid var(--color-red);
+  border-top: 750px solid var(--color-red);
   border-left: 555px solid transparent;
   border-right: 0px solid transparent;
 }
@@ -263,7 +266,7 @@
 .member_desktopDredBottomLeftTriangle {
   width: 0;
   height: 0;
-  border-bottom: 918px solid var(--color-dark-red);
+  border-bottom: 750px solid var(--color-dark-red);
   border-left: 0px solid transparent;
   border-right: 555px solid transparent;
 }
@@ -277,7 +280,7 @@
 .member_desktopBlueBottomLeftTriangle {
   width: 0;
   height: 0;
-  border-bottom: 918px solid var(--color-blue);
+  border-bottom: 750px solid var(--color-blue);
   border-left: 0px solid transparent;
   border-right: 555px solid transparent;
 }
@@ -301,7 +304,7 @@
 .member_desktopYellowTopRightTriangle {
   width: 0;
   height: 0;
-  border-bottom: 918px solid var(--color-yellow);
+  border-bottom: 750px solid var(--color-yellow);
   border-left: 555px solid transparent;
   border-right: 0px solid transparent;
 }
@@ -317,7 +320,7 @@
 .member_desktopRedBottomLeftTriangle {
   width: 0;
   height: 0;
-  border-top: 920px solid var(--color-red);
+  border-top: 750px solid var(--color-red);
   border-left: 0px solid transparent;
   border-right: 525px solid transparent;
 }
@@ -341,7 +344,7 @@
 .member_desktopDRedTopRightTriangle {
   width: 0;
   height: 0;
-  border-top: 900px solid var(--color-dark-red);
+  border-top: 750px solid var(--color-dark-red);
   border-left: 555px solid transparent;
   border-right: 0px solid transparent;
 }
@@ -362,7 +365,7 @@
 .member_desktopBlueTopRightTriangle {
   width: 0;
   height: 0;
-  border-top: 900px solid var(--color-blue);
+  border-top: 750px solid var(--color-blue);
   border-left: 555px solid transparent;
   border-right: 0px solid transparent;
 }
@@ -378,7 +381,7 @@
 .member_desktopYellowBottomLeftTriangle {
   width: 0;
   height: 0;
-  border-bottom: 918px solid var(--color-yellow);
+  border-bottom: 750px solid var(--color-yellow);
   border-left: 0px solid transparent;
   border-right: 555px solid transparent;
 }
